name:           outclass
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple

library
  hs-source-dirs:  src/main
  build-depends:   base >= 4,
                   binary,
                   bytestring,
                   containers,
                   mtl
  ghc-options:     -Wall
  exposed-modules: Language.Java.Codec,
                   Language.Java.Codec.Constants.Utf8,
                   Language.Java.Codec.Decoder,
                   Language.Java.Codec.Encoder,
                   Language.Java.Codec.Refs,
                   Language.Java.Constants,
                   Language.Java.Primitives

test-suite test
  type:          exitcode-stdio-1.0
  main-is:       src/test/Main.hs
  build-depends: outclass,
                 base >= 4,
                 binary,
                 bytestring,
                 mtl,
                 QuickCheck
