name:           outclass
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple

library
  hs-source-dirs:  src/main
  build-depends:   base >= 4,
                   binary,
                   bytestring
  ghc-options:     -Wall
  exposed-modules: Language.Java.Codec.Bytes,
                   Language.Java.Codec.Class,
                   Language.Java.Codec.Constants,
                   Language.Java.Codec.Constants.Utf8,
                   Language.Java.Codec.Opcodes

test-suite test
  type:          exitcode-stdio-1.0
  main-is:       src/test/Main.hs
  build-depends: outclass,
                 base >= 4,
                 binary,
                 bytestring,
                 mtl,
                 QuickCheck
