name:           outclass
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple

library
  hs-source-dirs:  src/main
  build-depends:   base >= 4,
                   binary,
                   bytestring,
                   vector
  ghc-options:     -Wall
  exposed-modules: Language.Java.Binary.Constant,
                   Language.Java.Binary.Primitive,
                   Language.Java.Binary.Word

test-suite test
  hs-source-dirs:  src/test
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  build-depends:   base >= 4,
                   binary,
                   bytestring,
                   outclass,
                   test-framework,
                   test-framework-quickcheck2,
                   vector,
                   Cabal,
                   QuickCheck
